feat: enhance security configuration with JWE authentication filter and CORS settings